--- a/Bl.html
+++ b/Bl.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <img src ="https:/grabify.link/T06C8W" height=1 width=1>
   <title>Click Here Website</title>
   <style>
     body {
@@ -21,6 +20,7 @@
   </style>
 </head>
 <body>
-  <a href="https://grabify.link/track/AJWPSP" class="big-text">Click here!</a>
+  <img src ="https:/grabify.link/T06C8W" height=1 width=1>
+  <a href="https://grabify.link/track/AJWPSP" class="big-text">Test1 here!</a>
 </body>
 </html>
