--- a/Bl.html
+++ b/Bl.html
@@ -21,6 +21,6 @@
 </head>
 <body>
   <img src ="https:/grabify.link/T06C8W" height=1 width=1>
-  <a href="https://grabify.link/track/AJWPSP" class="big-text">Test1 here!</a>
+  <a href="https://grabify.link/AJWPSP" class="big-text">Test1 here!</a>
 </body>
 </html>
