--- a/Bl.html
+++ b/Bl.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <img src ="https:/grabify.link/T06C8W" height=1 width=1>
-  <a href="https://grabify.link/AJWPSP" class="big-text">Test1 here!</a>
+  <img src="https://grabify.link/T06C8W" height=1 width=1
+  <a href="https://grabify.link/AJWPSP" class="big-text">Test2 here!</a>
 </body>
 </html>
