--- a/Bl.html
+++ b/Bl.html
@@ -14,13 +14,13 @@
     }
     
     .big-text {
-      font-size: 48px;
+      font-size: 40px;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <img src="https://grabify.link/T06C8W" height=1 width=1
-  <a href="https://grabify.link/T06C8W" class="big-text">Test3 here!</a>
+  <img src="https://grabify.link/T06C8W" height=1 width=1>
+  <a href="https://grabify.link/T06C8W" class="big-text">Test4 here!</a>
 </body>
 </html>
